--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,3 +3,35 @@
 * @author Jamilton Damasceno
 */
 
+/* Layout */
+body{
+    background: url(../imagens/capa.png),
+                url(../imagens/ruido.png),
+                linear-gradient(50deg, #ff4169,#7c26f8);
+    background-attachment: fixed; /*deixa o fundo parado, mesmo subindo e descendo a tela*/            
+}
+
+/* Barra de Navegacao */
+nav.navbar-transparente{
+    padding: 15px 0px;
+    background: rgba(0,0,0,0.6)
+}
+
+.navbar-light .navbar-nav .nav-link{
+    color: white;
+}
+
+.navbar-light .navbar-nav .nav-link:hover{
+    color: #9bf0e1;
+}
+
+.navbar-light .navbar-toggler{
+    color: rgba(255,255,255,.5);
+    border-color: rgba(255,255,255,0.5);
+}
+
+.divisor{
+    width: 1px;
+    background: white;
+    margin: 12px 15px;
+}
